--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: 安客
+subtitle: '安客'
+description: 'find a balance between work and life.'
 keywords:
-author: John Doe
-language: en
+author: Qanx
+language: 
 timezone: ''
 
 # URL
