--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -76,12 +76,12 @@ katex:
 # Image (圖片設置)
 # --------------------------------------
 
-# Favicon（網站圖標）
+# Favicon（网站图标）
 favicon: /img/favicon.png
 
-# Avatar (頭像)
+# Avatar (头像)
 avatar:
-  img: https://i.loli.net/2021/02/24/5O1day2nriDzjSu.png
+  img: https://files-cdn.cnblogs.com/files/blogs/280514/avatar.bmp
   effect: false
 
 # Disable all banner image
@@ -670,7 +670,7 @@ aside:
       enable: true
       icon: fab fa-github
       text: Follow Me
-      link: https://github.com/xxxxxx
+      link: https://github.com/qiax
   card_announcement:
     enable: true
     content: This is my Blog
@@ -877,9 +877,13 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
-    # - <link rel="stylesheet" href="/xxx.css">
+    <meta name="referrer" content="no-referrer"/>
+    <link rel="stylesheet" href="/css/background.css">
+    <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macWhite.css">
+    <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macblack.css">
   bottom:
-    # - <script src="xxxx"></script>
+    <script src="https://cdn.jsdelivr.net/gh/sviptzk/HexoStaticFile@latest/Hexo/js/mouse_snow.min.js"></script>
+    <script src="/js/my.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
@@ -903,15 +907,15 @@ CDN:
   custom_format:
 
   option:
-    # main_css:
-    # main:
-    # utils:
-    # translate:
-    # local_search:
-    # algolia_js:
+    main_css: /css/index.css
+    main: /js/main.js
+    utils: /js/utils.js
+    translate: /js/tw_cn.js
+    local_search: /js/search/local-search.js
+    algolia_js: /js/search/algolia.js
     # algolia_search_v4:
     # instantsearch_v4:
-    # pjax:
+    pjax: https://unpkg.com/pjax/pjax.min.js
     # gitalk:
     # gitalk_css:
     # blueimp_md5:
@@ -933,7 +937,7 @@ CDN:
     # lazyload:
     # instantpage:
     # typed:
-    # pangu:
+    pangu: https://unpkg.com/pangu/dist/browser/pangu.min.js
     # fancybox_css_v4:
     # fancybox_v4:
     # medium_zoom:
