--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -878,12 +878,12 @@ css_prefix: true
 inject:
   head:
     <meta name="referrer" content="no-referrer"/>
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="/css/qanx_main.css">
     <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macWhite.css">
     <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macblack.css">
   bottom:
     <script src="https://cdn.jsdelivr.net/gh/sviptzk/HexoStaticFile@latest/Hexo/js/mouse_snow.min.js"></script>
-    <script src="/js/my.js"></script>
+    <script src="/js/qanx_main.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
