--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,25 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: butterfly
 
+live2d:
+    enable: true
+    scriptFrom: local
+    pluginRootPath: live2dw/
+    pluginJsPath: lib/
+    pluginModelPath: assets/
+    tagMode: false
+    log: false
+    model:
+        use: live2d-widget-model-shizuku
+    display:
+        position: right
+        width: 150
+        height: 300
+    mobile:
+        show: false
+    react:
+        opacity: 0.7
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
