hexo-auto-category

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://qiax.github.io
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -117,6 +117,10 @@ live2d:
         show: false
     react:
         opacity: 0.7
+
+auto_category:
+  enable: true
+  depth: 3
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
