--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -425,9 +425,9 @@ messenger:
 # --------------------------------------
 footer:
   owner:
-    enable: true
+    enable: false
     since: 2020
-  custom_text:
+  custom_text: <div class="copyright">©2020 Qanx. ❤ <a href='https://beian.miit.gov.cn/' style='color:#858585 !important'>豫ICP备2021033723号</a></div>
   copyright: true # Copyright of theme and framework
 
 # Analysis
