--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -425,9 +425,9 @@ messenger:
 # --------------------------------------
 footer:
   owner:
-    enable: false
+    enable: true
     since: 2020
-  custom_text: <div class="copyright">©2020 Qanx. ❤ <a href='https://beian.miit.gov.cn/' style='color:#858585 !important'>豫ICP备2021033723号</a></div>
+  custom_text: <div class="copyright">©2020 Qanx ❤ <a href='https://beian.miit.gov.cn/' style='color:#858585 !important'>豫ICP备2021033723号</a></div>
   copyright: true # Copyright of theme and framework
 
 # Analysis
@@ -878,6 +878,7 @@ css_prefix: true
 inject:
   head:
     <meta name="referrer" content="no-referrer"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="/css/qanx_main.css">
     <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macWhite.css">
     <link href="https://cdn.jsdelivr.net/gh/sviptzk/StaticFile_HEXO@latest/butterfly/css/macblack.css">
